<resources>
    <string name="app_name">Exercise 3</string>
    <string name="Insurance">Insurance Premium Calculator</string>
    <string name="Age">Age:</string>
    <string name="Gender">Gender:</string>
    <string name="Smoker">Smoker:</string>
    <string name="TotalPremium">Total Premium:</string>

    <string-array name= "AgeRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
